<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Application information -->
    <string name="app_name">Machining Forces</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="mill_simple_mode">Базовый</string>
    <string name="mill_detail_mode">Расширенный</string>
    <string name="action_settings">Режим расчета</string>

    <string name="hello_fr1">Тут будут режимы обработки</string>
    <string name="hello_fr2">Тут будут допуски и посадки</string>
    <string name="hello_fr3">Тут будет марочник материалов</string>
    <string name="hello_fr4">Тут будет поиск инструмента</string>
    <string name="hello_fr5">Тут будет информация о нас</string>
    <string name="hello_fr6">Тут будет обратная связь</string>
    <string name="hello_mill_simple">Базовый расчет режимов фрезерования</string>
    <string name="hello_mill_detail">Расширенный расчет</string>

    <string name="Conditions">Режимы обработки</string>
    <string name="Tolerances">Допуски и посадки</string>
    <string name="Materials">Марочник материалов</string>
    <string name="Toolsearch">Поиск инструмента</string>
    <string name="Information">Информация о нас</string>
    <string name="Send">Написать нам</string>
    <string name="Feedback">Обратная связь</string>

    <!-- Input fields Milling-->

    <string name="Mill_Diameter_Description">Диаметр фрезы</string>
    <string name="Mill_DIameter_unit">D, мм.</string>

    <string name="Mill_Cutting_Speed_Description">Скорость резания</string>
    <string name="Mill_Cutting_Speed_Unit">Vc, м/мин.</string>

    <string name="Mill_Revolution_Description">Число оборотов</string>
    <string name="Mill_Revolution_Unit">n, об/мин.</string>

    <string name="Mill_Teeth_Quantity_Description">Число режущих кромок</string>
    <string name="Mill_Teeth_Unit">z, шт.</string>

    <string name="Mill_Feed_Per_Tooth_Description">Подача на зуб</string>
    <string name="Mill_Feed_Per_Tooth_Unit">fz, мм.</string>

    <string name="Mill_Minute_Feed_Description">Минутная подача</string>
    <string name="Mill_Minute_Feed_Unit">Fмин, мм/мин.</string>

    <string name="Mill_Revolution_Feed_Description">Подача на оборот</string>
    <string name="Mill_Revolution_Feed_Unit">Fоб, мм/об.</string>

    <string name="Mill_Cutting_Depth_Description">Глубина фрезерования</string>
    <string name="Mill_Cutting_Depth_Unit">Ap, мм.</string>

    <string name="Mill_Cutting_Width_Description">Ширина фрезерования</string>
    <string name="Mill_Cutting_Width_Unit">Ae, мм.</string>

    <string name="Mill_General_Angle_Description">Угол в плане</string>
    <string name="Mill_General_Angle_Unit">a, град.</string>

    <string name="Mill_Path_Length_Description">Длина пути фрезы</string>
    <string name="Mill_Path_Length_Unit">L, мм/мин.</string>

    <string name="Mill_Tool_Length_Description">Вылет инструмента</string>
    <string name="Mill_Tool_Length_Unit">Lвыл, мм/мин.</string>

    <string name="Mill_Front_Angle_Description">Передний угол</string>
    <string name="Mill_Front_Angle_Unit">у, град.</string>

    <string name="Mill_Average_Chips_Width_Description">Средняя толщина стружки</string>
    <string name="Mill_Average_Chips_Width_Unit">hм, мм.</string>

    <string name="Output_Description">Параметр</string>
    <string name="Output_Unit">Единица измерения</string>

    <string name="Mill_Average_Chip_Width">Средняя ширина стружки | hm, мм.</string>
    <string name="Mill_Specific_Material_Removal_Description">Удельный сьём материала | cm3/мин.</string>
    <string name="Mill_Cutting_Time_Description">Время обработки | мин.</string>
    <string name="Mill_Moment_Description">Удельный сьём материала | cm3/мин.</string>
    <string name="Mill_Power_Description">Требуемая мощность | кВт.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Go_to_MILL">Go_to_MILL</string>
    <string name="getMaterial">Обрабатываемый материал</string>
    <string name="zero">0</string>
    <string name="example_text3">Параметр</string>
    <string name="example_text4">Ед. измерения</string>

    <!-- Keyboard keys -->

    <string name="SL_KEY_1">1</string>
    <string name="SL_KEY_2">2</string>
    <string name="SL_KEY_3">3</string>
    <string name="SL_KEY_UP">UP</string>
    <string name="SL_KEY_4">4</string>
    <string name="SL_KEY_5">5</string>
    <string name="SL_KEY_6">6</string>
    <string name="SL_KEY_DOWN">DOWN</string>
    <string name="SL_KEY_7">7</string>
    <string name="SL_KEY_8">8</string>
    <string name="SL_KEY_9">9</string>
    <string name="SL_KEY_DEL">DEL</string>
    <string name="SL_KEY_STORAGE">CLEAR ALL</string>
    <string name="SL_KEY_0">0</string>
    <string name="SL_KEY_DOT">.</string>
    <string name="SL_KEY_CLEAR">CLEAR</string>

    <string name="textview" />

    <!-- Milling Menu -->
    <string name="MillMenu">Фрезерная обработка</string>
    <string name="simple_mill">Базовый расчет</string>
    <string name="detail_mill">Расширенный расчет</string>

    <string name="BUT_to_MILL">Фрезерная обработка</string>
    <string name="BUT_to_MILL_simple">Базовый расчет режимов обработки</string>
    <string name="BUT_to_MILL_detail">Расширенный расчет режимов обработки</string>
    <string name="BUT_to_turn">Токарная обработка</string>
    <string name="textview_fix">fixed</string>
    <string name="fix_Vc">fixed</string>
    <string name="fix_rev">fixed</string>
    <string name="fixed_z">fixed</string>
    <string name="fixed_fz">fixed</string>
    <string name="fixed_F">fixed</string>
    <string name="rad_fix_vc" />
    <string name="radiobutton_rev" />
    <string name="radiobutton_fz" />
    <string name="radiobutton_F" />
    <string name="but_lock">re</string>
    <string name="the_awesome_sliding_up_panel">The Awesome Sliding Up Panel</string>
    <string name="main_content">Main Content</string>
</resources>
