<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@android:color/darker_gray"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical"
    app:behavior_peekHeight="30dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TableLayout
        android:id="@+id/slide_keyboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical|center_horizontal|center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/SL_KEY_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SL_KEY_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SL_KEY_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_3"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SL_KEY_UP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_UP" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/SL_KEY_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_4"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SL_KEY_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_5"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SL_KEY_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_6"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SL_KEY_DOWN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_DOWN" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/SL_KEY_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_7"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SL_KEY_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_8"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SL_KEY_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_9"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SL_KEY_DEL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_DEL" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/SL_KEY_STORAGE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_STORAGE" />

            <Button
                android:id="@+id/SL_KEY_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_0"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SL_KEY_DOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_DOT"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/SL_KEY_CLEAR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/keyboard_button_behavior"
                android:text="@string/SL_KEY_CLEAR" />
        </TableRow>
    </TableLayout>

</LinearLayout>