<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_mill_simple"
            android:orderInCategory="100"
            android:title="@string/mill_simple_mode"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_mill_detail"
            android:orderInCategory="100"
            android:title="@string/mill_detail_mode"
            app:showAsAction="never" />
    </group>
</menu>
