<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LAYexample"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    android:weightSum="1">

    <TextView
        android:id="@+id/example_element_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/textview_fix"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/example_element_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:background="@drawable/textstyle"
        android:gravity="center"
        android:maxLength="8"
        android:text="@string/zero"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/example_element_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity=""
                android:text="@string/example_text3"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/example_element_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_text4"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>