<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MAIN_COND_MENU"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BASIC_MENU.MAIN_MENU_CONDITIONS">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/GOtoMILL"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/menu_button_style"
                android:contentDescription="@string/Go_to_MILL"
                android:text="@string/BUT_to_MILL"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/GOtoTURN"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/menu_button_style"
                android:text="@string/BUT_to_turn"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>